--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,9 @@
 /bin
 /dist
 
-# Neutralinojs client (minified)
-neutralino.js
-
 # Neutralinojs related files
 .storage
+.tmp
 *.log
 
 # NPM files
