--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,12 @@
 
 # Neutralinojs binaries and builds
 /bin
-/dist
+dist/fluentcode/fluentcode-linux_x64
+dist/fluentcode/fluentcode-mac_x64
+dist/fluentcode/fluentcode-win_x64.exe
+dist/fluentcode/resources.neu
+dist/fluentcode/WebView2Loader.dll
+
 
 # Neutralinojs related files
 .storage
