--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -1,5 +1,5 @@
 {
-  "applicationId": "js.neutralino.sample",
+  "applicationId": "fluentcode",
   "version": "0.1.1",
   "defaultMode": "window",
   "port": 0,
