--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -9,7 +9,7 @@
   "enableNativeAPI": true,
   "logging": {
     "enabled": true,
-    "writeToLogFile": true
+    "writeToLogFile": false
   },
   "nativeAllowList": [
     "app.*",
