--- a/src/codemirror/package.json
+++ b/src/codemirror/package.json
@@ -19,6 +19,7 @@
     "@codemirror/lang-java": "^6.0.0",
     "@codemirror/lang-javascript": "^6.0.0",
     "@codemirror/lang-json": "^6.0.0",
+    "@codemirror/lang-markdown": "^6.0.0",
     "@codemirror/lang-php": "^6.0.0",
     "@codemirror/lang-python": "^6.0.0",
     "@codemirror/lang-rust": "^6.0.0",
