Change window options
Settings window title to include active file, show window after render process end to prevent white screen. Stop hiding window when uploading and creating files using native system dialog.

--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -38,7 +38,7 @@
       "enableInspector": false,
       "borderless": false,
       "maximize": false,
-      "hidden": false,
+      "hidden": true,
       "resizable": true,
       "exitProcessOnClose": false
     },
