--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -1,6 +1,6 @@
 {
   "applicationId": "fluentcode",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "defaultMode": "window",
   "port": 0,
   "documentRoot": "/resources/",
@@ -9,7 +9,7 @@
   "enableNativeAPI": true,
   "logging": {
     "enabled": true,
-    "writeToLogFile": false
+    "writeToLogFile": true
   },
   "nativeAllowList": [
     "app.*",
@@ -23,14 +23,15 @@
     "extensions.*"
   ],
   "globalVariables": {
-    "LOADED": []
+    "LOADED": [],
+    "LOADING_TIME": null
   },
   "modes": {
     "window": {
       "title": "Fluent Code",
       "width": 800,
       "height": 600,
-      "minWidth": 600,
+      "minWidth": 700,
       "minHeight": 500,
       "fullScreen": false,
       "alwaysOnTop": false,
@@ -38,23 +39,9 @@
       "enableInspector": false,
       "borderless": false,
       "maximize": false,
-      "hidden": true,
+      "hidden": false,
       "resizable": true,
       "exitProcessOnClose": false
-    },
-    "browser": {
-      "globalVariables": {
-        "TEST": "Test value browser"
-      },
-      "nativeBlockList": [
-        "filesystem.*"
-      ]
-    },
-    "cloud": {
-      "url": "/resources/#cloud",
-      "nativeAllowList": [
-        "app.*"
-      ]
     }
   },
   "cli": {
