--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -15,11 +15,13 @@
     "app.*",
     "window.*",
     "clipboard.*",
+    "computer.*",
     "filesystem.*",
     "os.*",
     "debug.*",
     "events.*",
     "storage.*",
+    "updater.*",
     "extensions.*"
   ],
   "globalVariables": {
@@ -49,7 +51,7 @@
     "resourcesPath": "/resources/",
     "extensionsPath": "/extensions/",
     "clientLibrary": "/resources/js/neutralino.js",
-    "binaryVersion": "4.6.0",
-    "clientVersion": "3.5.0"
+    "binaryVersion": "4.7.0",
+    "clientVersion": "3.6.0"
   }
 }
