--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -40,7 +40,7 @@
       "enableInspector": false,
       "borderless": false,
       "maximize": false,
-      "hidden": false,
+      "hidden": true,
       "resizable": true,
       "exitProcessOnClose": false
     }
@@ -50,7 +50,7 @@
     "resourcesPath": "/resources/",
     "extensionsPath": "/extensions/",
     "clientLibrary": "/resources/js/neutralino.js",
-    "binaryVersion": "4.6.0",
-    "clientVersion": "3.5.0"
+    "binaryVersion": "4.7.0",
+    "clientVersion": "3.6.0"
   }
 }
