Disable window hidden
The bug that cause light flash on start still exist. Now app will display blank window at start like it was before.

--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -40,7 +40,7 @@
       "enableInspector": false,
       "borderless": false,
       "maximize": false,
-      "hidden": true,
+      "hidden": false,
       "resizable": true,
       "exitProcessOnClose": false
     }
